# en_playground_vectordb_comparison

./: .gitignore  CURRENT_USAGE.md  README.md  REPORT.md  TODO_faiss_gpu.md  VERDICT.md  bench_one.py  benchmark.py  benchmark_extended.py  benchmark_extended_results.json  benchmark_results.json  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py
candidates/: SUMMARY.md  base.py
candidates/chromadb/: README.md  __init__.py  adapter.py
candidates/faiss/: README.md  __init__.py  adapter.py
candidates/lancedb/: README.md  __init__.py  adapter.py
candidates/milvus/: README.md  __init__.py  adapter.py
candidates/qdrant/: README.md  __init__.py  adapter.py
candidates/usearch/: README.md  __init__.py  adapter.py
candidates/vectordb_baseline/: README.md  __init__.py  adapter.py
candidates/zvec/: README.md  __init__.py  adapter.py
tests/: conftest.py  test_integration.py
