[project]
name = "vectordb-comparison"
version = "0.1.0"
description = "Comparing different solutions for vectordb replacement in Edge Node"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core
    "numpy>=1.24.0",

    # Benchmarking & reporting
    "tabulate>=0.9.0",
    "psutil>=5.9.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
# Individual candidates — install only what you need
lancedb = ["lancedb>=0.15.0"]
chromadb = ["chromadb>=0.5.0"]
qdrant = ["qdrant-client>=1.9.0"]
faiss = ["faiss-cpu>=1.7.4"]
milvus = ["pymilvus[milvus_lite]>=2.4.0", "setuptools<81"]
zvec = ["zvec>=0.2.0"]
usearch = ["usearch>=2.12.0"]
baseline = [
    "vectordb>=0.0.21",
    "docarray[hnswlib]>=0.34.0",
]

# Install all candidates at once
all = [
    "vectordb-comparison[lancedb]",
    "vectordb-comparison[chromadb]",
    "vectordb-comparison[qdrant]",
    "vectordb-comparison[faiss]",
    "vectordb-comparison[milvus]",
    "vectordb-comparison[zvec]",
    "vectordb-comparison[usearch]",
    "vectordb-comparison[baseline]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["candidates"]
